[package]
name = "twitter-streams"
version = "0.1.0"
authors = ["Justin Geibel <jtgeibel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.7"
futures = "0.1"
hyper = "0.12"
log = "0.4"
plotters = "0.2"
sentiment = "0.1"
serde_json = "1.0"
tokio-io = "0.1"
tokio-fs = "0.1"
twitter-stream = "0.9" #"0.10.0-alpha.1"
