[package]
name = "twitter-streams"
version = "0.1.0"
authors = ["Justin Geibel <jtgeibel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.7"
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat", "async-await", "nightly"] }
hyper = "=0.13.0-alpha.1"
log = "0.4"
plotters = "0.2"
sentiment = "0.1"
serde_json = "1.0"
tokio = "=0.2.0-alpha.4"
tokio-executor = "=0.2.0-alpha.4"
tokio-io = "=0.2.0-alpha.4"
tokio-fs = "=0.2.0-alpha.4"
tokio-sync = "=0.2.0-alpha.4"
twitter-stream = "0.10.0-alpha.1"
